--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "bensampo/laravel-embed": "^2.3",
+        "cohensive/oembed": "^0.17.0",
+        "cviebrock/eloquent-sluggable": "9.0",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
         "laravel/framework": "^9.19",
@@ -18,6 +21,7 @@
         "php-ffmpeg/php-ffmpeg": "^1.1"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.9",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
