--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,12 @@
         "bensampo/laravel-embed": "^2.3",
         "cohensive/oembed": "^0.17.0",
         "cviebrock/eloquent-sluggable": "9.0",
-        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/guzzle": "^7.8",
         "intervention/image": "^2.7",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "laravel/ui": "^4.2",
         "pbmedia/laravel-ffmpeg": "^8.3",
         "php-ffmpeg/php-ffmpeg": "^1.1"
     },
